1. Add JDQS GZ/TM version support, exclude from bittorrent of (TM) UTP protocol. 2. Add YinYang from Netease support

--- a/src/lib/Makefile.am
+++ b/src/lib/Makefile.am
@@ -170,6 +170,8 @@ libndpi_la_SOURCES = ndpi_content_match.c.inc \
 		     protocols/netease_hyxd.c \
 		     protocols/wzry_pvp.c \
 		     protocols/yy.c \
+		     protocols/jdqs_gz.c \
+		     protocols/netease_yinyang.c \
 		     third_party/include/actypes.h \
 		     third_party/include/ahocorasick.h \
 		     third_party/include/ndpi_patricia.h \
